@@ -15,7 +15,8 @@
  */
 /// usr/bin/env jbang "$0" "$@" ; exit $?
 //JAVA 24+
-//PREVIEW
+//JAVAC_OPTIONS --enable-preview -source 24
+//JAVA_OPTIONS --enable-preview
 //DEPS com.vladsch.flexmark:flexmark-all:0.64.8
 
 import com.vladsch.flexmark.html.HtmlRenderer;
